style: apply formatter